# llvm-project

llvm/include/llvm/: InitializePasses.h
llvm/include/llvm/CodeGen/: Passes.h
llvm/include/llvm/Passes/: MachinePassRegistry.def
llvm/include/llvm/Support/: CommandLine.h
llvm/lib/CodeGen/: CMakeLists.txt  CodeGen.cpp  MIRPrinter.cpp  MIRPrintingPass.cpp  UnisonMIRPrepare.cpp  UnisonMIRPrepare.h
llvm/lib/CodeGen/MIRParser/: MILexer.cpp  MILexer.h  MIParser.cpp
llvm/lib/CodeGen/SelectionDAG/: SelectionDAGISel.cpp
llvm/lib/IR/: LegacyPassManager.cpp
llvm/lib/TableGen/: Unison.cpp
llvm/test/CodeGen/AMDGPU/: 4_tlp_fast_reduced.llir  sched_group_mask.py
llvm/utils/: extract_symbols.py
llvm/utils/TableGen/Basic/: TableGen.cpp
mlir/HelloMLIR/: CMakeLists.txt  HelloWorldMLIR.cpp  linear.mlir
mlir/cmake/modules/: AddMLIRPython.cmake
mlir/include/mlir-c/: Pass.h
mlir/include/mlir-c/Dialect/: Polynomial.h
mlir/include/mlir/Pass/: PassOptions.h  PassPlugin.h  PassRegistry.h
mlir/include/mlir/Tools/mlir-opt/: MlirOptMain.h
mlir/lib/Bindings/Python/: DialectPolynomial.cpp  IRCore.cpp  Pass.cpp
mlir/lib/CAPI/IR/: Pass.cpp
mlir/lib/Pass/: PassPlugin.cpp  PassRegistry.cpp
mlir/lib/Tools/mlir-opt/: MlirOptMain.cpp
mlir/python/: CMakeLists.txt
mlir/python/mlir/: ir.py
mlir/python/mlir/dialects/: _ods_common.py  amdgpu.py  arith.py  bufferization.py  index.py  llvm.py  nvgpu.py  nvvm.py  sparse_tensor.py  vector.py
mlir/python/mlir/dialects/gpu/: __init__.py
mlir/python/mlir/dialects/linalg/: __init__.py
mlir/python/mlir/dialects/linalg/opdsl/ops/: core_named_ops.py
mlir/python/mlir/dialects/transform/: __init__.py  structured.py  vector.py
mlir/python/mlir/dialects/transform/extras/: __init__.py
mlir/test/lib/IR/: TestBytecodeRoundtrip.cpp
mlir/test/mlir-tblgen/: enums-python-bindings.td  op-python-bindings.td
mlir/test/python/: pass_manager.py
mlir/test/python/dialects/: transform_structured_ext.py
mlir/test/python/ir/: value.py
mlir/tools/mlir-opt/: CMakeLists.txt
mlir/tools/mlir-tblgen/: EnumPythonBindingGen.cpp  OpPythonBindingGen.cpp
mlir/utils/: generate-test-checks.py
utils/bazel/llvm-project-overlay/mlir/: BUILD.bazel
utils/bazel/llvm-project-overlay/mlir/python/: BUILD.bazel
utils/bazel/llvm-project-overlay/mlir/python/mlir/_mlir_libs/: BUILD.bazel
